--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: rag-dev
     volumes:
       - .:/workspace
+    environment:
+      - HF_TOKEN=${HF_TOKEN}
     deploy:
       resources:
         reservations:
