Added fastapi endpoints for document upload and QA. Attempted to also make the template to be more strict as the LLM was trying to answer questions that they did not know the context of (they were trying to use their prior knowledge, where they should only use the pdf context).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: rag-dev
     volumes:
       - .:/workspace
+    ports:
+      - "8000:8000"
     environment:
       - HF_TOKEN=${HF_TOKEN}
     deploy:
