Finalized Docker setup with requirements.txt and added error handling and logging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: rag-dev
     volumes:
       - .:/workspace
+      - ./chroma_db:/workspace/chroma_db
     ports:
       - "8000:8000"
     environment:
